<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.DetalleNoticiaFragment">



        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:scaleType="centerCrop"
                    android:src="@drawable/internacionales_horiz"
                 />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="-4sp"
                    android:paddingHorizontal="5dp"
                    android:text="@string/titulo_de_cat_espectaculos"
                    android:textColor="@color/colorNegro"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="2dp"
                    android:lineSpacingExtra="0sp"
                    android:paddingHorizontal="5dp"
                    android:text="@string/texto_de_cat_espectaculos"
                    android:textColor="@color/colorNegro"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewLink"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    android:textStyle=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/nota_completa"
                    android:textSize="12sp"
                    android:textColor="@color/colorBlanco"
                    android:textAllCaps="true"
                    android:contextClickable="true"
                    app:layout_constraintEnd_toEndOf="@id/scrollView2"/>

            </LinearLayout>

</ScrollView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorNegro"
        android:gravity="center"
        android:text="@string/ejemplo_categoria"
        android:textColor="@color/colorBlanco"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>